--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18n-combine-webpack-plugin",
-  "version": "0.1.0",
+  "version": "0.2.2",
   "description": "i18n json files combine",
   "author": "baijunjie",
   "license": "MIT",
@@ -8,7 +8,8 @@
   "dependencies": {
     "chokidar": "^3.0.1",
     "fs-extra": "^8.0.1",
-    "globby": "^9.2.0"
+    "globby": "^9.2.0",
+    "lodash": "^4.17.14"
   },
   "repository": {
     "type": "git",
